--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
                 node.classList.add('selected');
                 selectedNode = nodeId;
             }
+            setStatus('按住ctrl并点击下一个节点来连边', 'info');
         }
 
         // 编辑节点标签
