--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
             font-family: 'Courier New', monospace;
             font-size: 14px;
             line-height: 1.5;
+            white-space: pre-wrap; /* 显示换行 */
         }
         
         .preview {
