增加中途打出记录，相当于打了个锚点，后面可以拆开第一张图到第二张图操作了什么

--- a/index.html
+++ b/index.html
@@ -739,6 +739,7 @@
             a.click();
             URL.revokeObjectURL(url);
             setStatus('Mermaid代码已导出！', 'success');
+            window.steps.push(`导出Mermaid代码`);
         }
 
         // 清空画布
